#performance - New Autoloader

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/Opl3"]
 	path = lib/Opl3
-	url = https://github.com/missinglink/opl3-autoloader
+	url = git://github.com/missinglink/opl3-autoloader.git
