--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
     - 5.3
 
 before_install:
-    - git submodule update --init --recursive
+    - git submodule --quiet update --init --recursive
 
 script: phpunit
